src/test/ui/rfc-2126-extern-in-paths/non-existent-2.stderr
error[E0463]: can't find crate for `xcrate`
  --> $DIR/non-existent-2.rs:14:21
   |
LL |     let s = extern::xcrate::S; //~ ERROR can't find crate for `xcrate`
   |                     ^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
